--- a/style.css
+++ b/style.css
@@ -102,17 +102,17 @@ background-size: cover;
 
 
 .cube-1 .left {
-    background: url(https://raw.githubusercontent.com/amv-coding/Grandpa-Cube/main/IMG_1845.jpg) no-repeat 50% 0;
+    background: url(https://raw.githubusercontent.com/amv-coding/Tribute-to-Grandpas-Cube/main/alberto%20photo.jpg) no-repeat 50% 0;
     background-size: cover;
 }
 
 .cube-2 .left {
-    background: url(https://raw.githubusercontent.com/amv-coding/Grandpa-Cube/main/IMG_1845.jpg) no-repeat 50% -7vw;
+    background: url(https://raw.githubusercontent.com/amv-coding/Tribute-to-Grandpas-Cube/main/alberto%20photo.jpg) no-repeat 50% -7vw;
     background-size: cover;
 }
 
 .cube-3 .left {
-    background: url(https://raw.githubusercontent.com/amv-coding/Grandpa-Cube/main/IMG_1845.jpg) no-repeat 50% -14vw;
+    background: url(https://raw.githubusercontent.com/amv-coding/Tribute-to-Grandpas-Cube/main/alberto%20photo.jpg) no-repeat 50% -14vw;
     background-size: cover;
 }
 
