--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .container {
 height: 100vh;
 width: 100%;
-background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.8)),url(https://raw.githubusercontent.com/amv-coding/Tribute-to-Grandpas-Cube/main/background%20for%20grandpa%20cube.png) no-repeat;
+background: url(https://raw.githubusercontent.com/amv-coding/Tribute-to-Grandpas-Cube/main/background%20for%20grandpa%20cube.png) no-repeat;
 background-size: cover;
 }
 
